charon/tests/ui/unsupported/advanced-const-generics.out
thread 'rustc' panicked at src/bin/charon-driver/translate/translate_types.rs:772:42:
called `Option::unwrap()` on a `None` value
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::foo`.
  --> tests/ui/unsupported/advanced-const-generics.rs:14:1
   |
14 | fn foo<const X: Foo>() -> Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::foo
  --> tests/ui/unsupported/advanced-const-generics.rs:14:1
   |
14 | fn foo<const X: Foo>() -> Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

disabled backtrace
error[E9999]: Supposely unreachable place in the Rust AST. The label is "TranslateUneval".
              This error report happend because some assumption about the Rust AST was broken.
              
              Context:
               - self: UnevaluatedConst { def: test_crate::bar::{constant#0}, args: [N/#0] }
               - ucv: UnevaluatedConst {
                  def: test_crate::bar::{constant#0},
                  args: [
                      N/#0,
                  ],
              }
  |
  = note: ⚠️ This is a bug in Hax's frontend.
          Please report this error to https://github.com/hacspec/hax/issues with some context (e.g. the current crate)!

error: Thread panicked when extracting item `test_crate::bar`.
  --> tests/ui/unsupported/advanced-const-generics.rs:18:1
   |
18 | / fn bar<const N: usize>()
19 | | where
20 | |     [(); N + 1]:,
   | |_________________^

error: Ignoring the following item due to an error: test_crate::bar
  --> tests/ui/unsupported/advanced-const-generics.rs:18:1
   |
18 | / fn bar<const N: usize>()
19 | | where
20 | |     [(); N + 1]:,
   | |_________________^

error: aborting due to 5 previous errors

Error: Charon driver exited with code 101
